--- a/.env
+++ b/.env
@@ -8,12 +8,19 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
+DB_CONNECTION=sqlsrv
+DB_HOST=172.22.64.11
+DB_PORT=
+DB_DATABASE=CA_LINECALL
+DB_USERNAME=sa
 DB_PASSWORD=
+
+SECOND_DB_CONNECTION=sqlsrv
+SECOND_DB_HOST=172.22.64.14
+SECOND_DB_PORT=
+SECOND_DB_DATABASE=CAPROD
+SECOND_DB_USERNAME=sa
+SECOND_DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
