insert data into db

--- a/.env
+++ b/.env
@@ -3,6 +3,8 @@ APP_ENV=local
 APP_KEY=base64:tdhYxjm0qWP7QCxSV5gsDZ3S85eFkABqsDJ+vgmQQwc=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_CHARSET=utf-8
+APP_TIMEZONE=Asia/Bangkok
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
