--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.11.3",
         "boxicons": "^2.1.4",
-        "jquery": "^3.7.1"
+        "jquery": "^3.7.1",
+        "sweetalert2": "^11.14.1"
     }
 }
