approve level and reject

--- a/.env
+++ b/.env
@@ -24,6 +24,13 @@ SECOND_DB_DATABASE=CAPROD
 SECOND_DB_USERNAME=sa
 SECOND_DB_PASSWORD=
 
+THIRD_DB_CONNECTION=sqlsrv
+THIRD_DB_HOST=172.22.64.11
+THIRD_DB_PORT=
+THIRD_DB_DATABASE=WEBSERVER
+THIRD_DB_USERNAME=sa
+THIRD_DB_PASSWORD=
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
